--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,11 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Little Lemon is a multi-cuisine restaurant which brings the best heat in town."
     />
+    <meta name="og:title" content="Little Lemon Restaurant" />
+    <meta name="og:description" content="Little Lemon brings to you the best of traditional dishes with modern fusion in a multi-cuisine experience." />
+    <meta name="og:image" content="%PUBLIC_URL%/meta-image.png" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
